# SelfSnap

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: feature_request.md  report_issue.md
.github/workflows/: ci.yml  dev-branch-pr.yml  issue-intake.yml  package-main.yml  pr-plan.yml  release.yml
docs/: CLI_REFERENCE.md  CONFIG_REFERENCE.md  INSTALL_AND_UPDATE.md  README.md  TROUBLESHOOTING.md  WORKFLOWS.md
docs/archive/: README.md
docs/archive/customer_baseline/: 00_README.md  01_Questionnaire.md  02_Project_Charter.md  03_Product_Brief.md  04_Intake_Form.md  05_Scope.md  05_Scope_Constraints_NonGoals.md  06_Roadmap.md  README.md  (+1 more)
docs/customer_baseline/: 01_Master_Customer_Questionnaire__START_HERE.md  02_Project_Charter.md  04_Customer_Intake_Form.md  06_Downstream_Document_Roadmap.md  07_Proposed_Next_Actions_For_Team.md
docs/developer/: README.md  software-requirements-specification-and-architecture-v1.md  validation-checklist.md
docs/implementation/: 1_0_gap_register.md  1_0_scope_lock.md  BENCHMARK_1_0_BASELINE.md  INTERPRETER_ENFORCEMENT_AND_VENV_POLICY.md  ISSUE_REPORTING.md  PRD_v1.md  QA_Privacy_v1.md  RELEASE_CRITERIA_1_0.md  SCHEDULER_AND_DST_EDGE_CASES.md  SETTINGS_WINDOW_STATE_SYNC_AND_POLLING.md  SRS_Architecture_v1.md  TRAY_MENU_STRUCTURE_AND_EVOLUTION.md  UI_PATTERNS_AND_RESPONSIVE_LAYOUT.md  VALIDATION_CHECKLIST.md  release_progress_tracker.md
docs/maintainer/: README.md  product-requirements-document-v1.md  validation-checklist.md
docs/product/: CONFIG_REFERENCE.md  INSTALL_AND_UPDATE.md  README.md  TROUBLESHOOTING.md
docs/releases/: v0.8.0.md
docs/starter_kit/: 03_Reference_Core_Extraction_Map.md  05_Project_Intake_Form.md  06_Starter_Extraction_Plan.md
docs/user/: CLI_REFERENCE.md  CONFIG_REFERENCE.md  INSTALL_AND_UPDATE.md  README.md  TROUBLESHOOTING.md  WORKFLOWS.md  config.example.json
packaging/windows/: SelfSnapBundle.wxs  SelfSnapInstaller.wxs
sample/: config.example.json  tray_app_factory_manifest.example.json
scripts/: README.md  _selfsnap_script_helpers.ps1  build.ps1  cleanup_pytest_artifacts.ps1  cleanup_repo_artifacts.ps1  install.ps1  publish_github_metadata.ps1  reinstall.ps1  setup.ps1  smoke_test.ps1  uninstall.ps1
scripts/developer/: README.md  build.ps1  package_windows.ps1  smoke_test.ps1
scripts/shared/: _selfsnap_script_helpers.ps1
scripts/user/: README.md  install.ps1  reinstall.ps1  setup.ps1  uninstall.ps1
src/selfsnap/: __init__.py  __main__.py  capture_engine.py  cli.py  config_store.py  db.py  issue_reporting.py  lifecycle_actions.py  logging_setup.py  models.py  paths.py  records.py  recurrence.py  reset_service.py  retention.py  runtime_launch.py  runtime_probe.py  storage.py  tray_main.py  ui_labels.py  update_checker.py  window_sizing.py  worker.py  worker_main.py
tests/: conftest.py
tests/integration/: test_db_roundtrip.py  test_worker_manual_capture.py
tests/support/: factories.py  scheduler.py
tests/unit/: test_cli.py  test_config_store.py  test_db.py  test_file_naming.py  test_fluent_scrollable_page.py  test_issue_reporting.py  test_lifecycle_actions.py  test_logging_setup.py  test_models.py  test_paths.py  test_recent_captures_window.py  test_reconcile.py  test_records.py  test_recurrence.py  test_recurrence_hypothesis.py  test_repo_hygiene.py  test_reset_service.py  test_retention.py  test_retention_purge.py  test_runtime_launch.py  test_runtime_probe.py  test_schedule_docs.py  test_schedule_editor.py  test_scheduler_sync.py  test_scheduler_sync_backend.py  test_settings_window.py  test_settings_window_layout.py  test_storage.py  test_tray_app.py  test_tray_diagnostics.py  test_tray_ui_presenters.py  test_ui_diagnostics.py  test_ui_fluent.py  test_ui_labels.py  test_ui_presentation.py  test_update_checker.py  test_window_sizing.py
(+49 files in other folders)
